--- a/web/app/views/user_mailer/activation_needed_email.html.haml
+++ b/web/app/views/user_mailer/activation_needed_email.html.haml
@@ -1,7 +1,7 @@
 .row
   .content.col-md-5.col-md-offset-1
     %h1
-      ="Welcome to GPSTracker.com, #{@user.email}"
+      Welcome to GPSTracker.com
     %h1
       You have successfully signed up to GPSTracker.com,
     %h2
