--- a/web/app/views/user_mailer/activation_needed_email.text.erb
+++ b/web/app/views/user_mailer/activation_needed_email.text.erb
@@ -1,4 +1,4 @@
-Welcome to GPSTracker.com, <%= @user.email %>
+Welcome to GPSTracker.com
 ===============================================
 
 You have successfully signed up to GPSTracker.com,
