--- a/web/app/views/user_mailer/activation_needed_email.html.haml
+++ b/web/app/views/user_mailer/activation_needed_email.html.haml
@@ -8,6 +8,6 @@
       %h2
         ="your username is: #{@user.email}."
       %h2
-        ="To login to the site, just follow this link: #{@url}."
+        ="To verify your profile, just follow this link: #{@url}."
       %h2
         Thanks for joining and have a great day!
