--- a/web/app/views/user_mailer/reset_password_email.html.haml
+++ b/web/app/views/user_mailer/reset_password_email.html.haml
@@ -1,4 +1,13 @@
-%h1 User#reset_password_email
-%p
-  = @greeting
-  , find me in app/views/user_mailer/reset_password_email.html.erb
+.row
+  .content.col-md-4
+    .jumbotron{align: 'center'}
+      %h1
+        Reseting password at tracker-dev
+      %h1
+        You have called reset password function,
+      %h2
+        ="your username is: #{@user.email}."
+      %h2
+        ="To reset your password, just follow this link: #{@url}."
+      %h2
+        Thanks for your time and have a great day!
