--- a/web/app/views/dashboard/_table.html.haml
+++ b/web/app/views/dashboard/_table.html.haml
@@ -1,6 +1,7 @@
+- name = !paths.where(group: i).first.custom_name.present? ? "Group #{i - paths.first.group + 1}" : "#{paths.where(group: i).first.custom_name}"
 %tr{id: "group-#{paths.where(group: i).first.id}"}
   %td
-    - if i == -1
+    - if paths.last.group == -1
       Current
     - else
       .hover_text{id: "#{i}"}
