--- a/web/app/views/dashboard/show.html.haml
+++ b/web/app/views/dashboard/show.html.haml
@@ -1,5 +1,5 @@
 - if params[:date].present?
-  #main-container.container-fluid{data: {list: @paths.to_json}}
+  #main-container.container-fluid{data: {list: @paths_filtered.to_json}}
   %script{async: '', defer: 'defer',
     :src => "https://maps.googleapis.com/maps/api/js?key=AIzaSyBBJehlZdShzoTdNZUNrMncq9G4kK8y7cw&callback=initMap"}
   #myModal.modal.fade{'aria-labelledby': 'mySmallModalLabel', role: 'dialog', tabindex: '-1'}
